syntax = "proto3";

import "google/protobuf/timestamp.proto";

package net.whir.hos.organization;

service SecuritysService {
    //查询所有
    rpc users (EmployeeListRequest) returns (UserListResponse) {
    };
    //查询单个用户
    rpc user (UserRequest) returns (userResponse) {
    };
    rpc file (FileId) returns (FileObject) {
    };
    rpc getSelection (GetSelectionRequest) returns (GetSelectionResponse) {
    };
    rpc positionDaoFindAll (PositionDaoFindAllRequest) returns (PositionDaoFindAllResponse) {
    };
    rpc assignee (IdReq) returns (AssigneeResponse) {
    };
    rpc employeePositionFindAll (EmployeePositionUsersRequest) returns (EmployeePositionUsersResponse) {
    };
    rpc findJobNumber (JobNumberReq) returns (EmployeeGetResponse) {
    };
}

//----------------------------------------
message AddEmployeeLinkRequest {
    string type = 1;
    int64 uid = 2;
    int64 linkId = 3;
}
message AddEmployeeLinkResponse {


}

//----------------------------------------

//---------------------------------------
message AssigneeResponse {
    Employee employee = 1;
}
//---------------------------------------

//根据用户id，查询该用户所在部门-----
message EmployeePositionUsersRequest {
    int64 id = 1;
}

message EmployeePositionUsersResponse {
    repeated PositionDaoFindAll positionDaoFindAll = 1;
}
//----------------------------------

//-----------------------------
message GetSelectionRequest {
    repeated ReceiversRequest receivers = 1;
    int32 fg = 3; //分別請求两个模块 1 和 4 参数可选
    string selectionScope = 4;

}
message ReceiversRequest {
    string securityTypeReceiversAndRequest = 1;
    string value = 2;

}

message GetSelectionResponse {
    repeated Employee employee = 1;
}

//-----------------------------------------

//-----------------------------------------
message PositionDaoFindAllRequest {
    string organization = 1;
}


message PositionDaoFindAllResponse {
    repeated PositionDaoFindAll positionDtoFindAll = 1;
}

message PositionDaoFindAll {
    int64 id = 1;
    bool primary = 2;
    int64 departmentId = 5;
    string organizationId = 6;
}

//-----------------------------------------


message ResponseNull {
}

//查询所有请求--------------------
message EmployeeListRequest {
    UserFilter userF = 1;
    int32 page = 2;
    int32 pageSize = 3;
    OrderBy orderBy = 4;

};
//查询所有返回
message UserListResponse {
    repeated User employeeList = 1;
};
//查询条件
message UserFilter {
    //姓名模糊查询
    string nickname_like = 1;
    //组织
    string organization_eq = 2;
}
message Employee {
    uint64 id = 1;
    // 状态
    EmployeeStatus EmployeeStatus = 2;
    // 工号
    string jobNumber = 3;
    // 头像
    FileObject avatar = 4;
    // 名称
    string name = 5;
    // 生日
    string birthday = 6;
    // 性别
    Sex sex = 7;
    // 移动电话
    string mobile = 8;
    // 固定电话
    string tel = 9;
    // E-mail
    string email = 10;
    repeated EmployeePositions employeePositions = 11;
    repeated int64 departmentIds = 12;
    //权限
    repeated string authoritys = 13;

}

message EmployeePositions {
    bool primary = 1;
    Department department = 2;
    Position position = 3;
    Organization organization = 4;
    OrganizationEmployee organizationEmployee = 5;
}

message OrganizationEmployee {
    OrganizationEmployeeStatus status = 1;
}

message OrganizationEmployeeStatus {
    string code = 1;
    string name = 2;
}
//------------------------------------

//根据id查询用户------------------
message UserRequest {
    int64 idUserRequest = 1;
}
//根据id查询
message userResponse {
    User userResponses = 1;

}
//---------------------------------

//查询授权范围 -----------------------
message securityScopesRequest {
    repeated int64 ids = 1;
}
message securityScopesResponse {
    repeated SecurityScope securityScope = 1;
}
message SecurityScope {
    int64 id = 1;
    SecurityType type = 2;
    Role role = 3;
    User user = 4;
    Employee employeeEntity = 5;
    Department departmentSecurityScope = 7;
    EmployeeGroups EmployeeGroupSecurityScope = 8;
    Organization organization = 9;
}
message EmployeeGroups {
    int64 id = 1;
    //群组名称
    string name = 2;
    //是否启用
    bool enabled = 3;
    //描述
    string description = 4;
    //群组下的成员
    Employee employeesGroup = 5;
    //用户组范围
    EmployeeGroupScope scope = 6;
}
message PermissionsRequest {
    string resourceType = 1;
    string permissionKey = 2;
}
//角色
message Role {
    //编码
    int64 id = 1;
    //名称
    string name = 2;
    //是否启用
    bool enabled = 3;
    //描述
    string description = 4;
}
message User {
    int64 id = 1;
    //管理员姓名
    string nickName = 2;
    //登录名
    string username = 3;
    //登录密码
    string password = 4;
    //是否启用
    bool enabled = 5;
    //电话
    string tel = 6;
    //角色
    repeated Role roles = 7;
}
message Job {
    //职务
    int64 id = 1;
    //职务名称
    string name = 2;
    //职务描述信息
    string description = 3;
}
message Department {
    int64 id = 1;
    //部门编码
    string sn = 2;
    //部门名称
    string name = 3;
    //部门全称 格式如: 销售管理中心.售前支持
    string fullName = 4;
    //部门描述信息
    string description = 5;
    //部门包含的职务
    repeated Job jobs = 6;
    //包含所有父级节点的ID
    string path = 7;
    //部门包含的职位
    repeated Position position = 8;
    //排序字段
    int32 sort = 9;
    //上级机构
    Department parent = 10;
    //下属部门
    repeated Department children = 11;
    //部门员工
    repeated Employee employees = 12;
    // 组织机构
    Organization organization = 13;
    // 所有父级部门的集合
    repeated Department parents = 14;
    /* //汇总统计
     collect(type: String): Int*/
    //人员电子签名
    repeated AutographPng autographPngs = 15;
}


message EmployeeGroupScope {
    //范围ID
    string id = 1;
    //范围名称
    string name = 2;
    //所属组织
    Organization organization = 3;
}
message Organization {
    string id = 1;
    string name = 2;
    //组织部门
    repeated Department departments = 3;
    repeated Job jobs = 4;
    //创建人
    string creator = 5;
    //修改人
    string modifier = 6;

}
//用户签名照片部门公章
message AutographPng {
    //Id
    int64 id = 1;
    //描述信息
    string description = 2;
    //是否启用 0禁用 1 启用
    bool enabled = 3;
    //签名附件
    bytes autographFile = 4;
    //签名类型
    AutographEnum type = 5;
}
enum AutographEnum {
    //人员签名
    employeeAutographEnum = 0;
    //部门公章
    departmentAutographEnum = 1;
}
enum SecurityType {
    //组织
    organization = 0;
    //部门
    departmentSecurityType = 1;
    //岗位
    job = 2;
    //职务
    position = 3;
    //员工
    employeeSecurityType = 4;
    //群组
    employeeGroupSecurityType = 5;
    //角色
    role = 6;
    //登录用户
    user = 7;
}
//排序
enum OrderBy {
    DESC = 0;
    ASC = 1;
}
//职位
message Position {
    //职位
    int64 id = 1;
    //职位名称
    string name = 2;
    //职位描述信息
    string description = 3;
    //职位拥有的角色
    repeated Role roles = 4;
    //所属部门
    Department departmentPosition = 5;
    //职位
    Job job = 6;
}
//---------------------------------

message IdReq {
    int64 idReq = 1;
}

message IdReqString {
    string idReq = 1;
}

message FileId {
    string idReq = 1;
}


message JobNumberReq {
    string idReq = 1;
}

message responseBool {
    bool value = 1;
}
//创建角色--------------------
message CreateRoleRequest {
    int64 organization = 1;
    int64 id = 2;
    string name = 3;
    string description = 4;

}
message CreateRoleResponse {
    Role role = 1;
}
//-----------------------------

//更改角色--------------------
message UpdateRoleRequest {
    int64 updateRoleRequestId = 1;
    string name = 2;
    string description = 3;
    // 是否启用
    bool enabled = 4;
    bool merge = 5;

}
message UpdateRoleResponse {
    Role role = 1;
}
//-----------------------------

//创建用户--------------------
message CreateUserRequest {
    //名称
    string nickName = 1;
    //登录名
    string username = 2;
    //密码
    string password = 3;
    //联系电话
    string tel = 4;
    //角色
    repeated string roles = 5;
    //授予权限
    repeated GrantPermissionByUserInput grants = 6;

}
message CreateUserResponse {
    User user = 1;
}
message GrantPermissionByUserInput {
    string permission = 1;
    string resource = 2;
}
//-----------------------------

//修改用户::合并待--------------------
message UpdateUserRequest {
    //名称
    string nickName = 1;
    //登录名
    string username = 2;
    //密码
    string password = 3;
    //联系电话
    string tel = 4;
    //角色
    repeated string roles = 5;
    //授予权限User
    repeated GrantPermissionByUserInput grantsUpdate = 6;
    //是否启用
    bool enabled = 7;
}
message UpdateUserResponse {
    User user = 1;
}

//-----------------------------


enum EmployeeStatus {
    MAN = 0;
    WOMAN = 1;
}

message FileObject {
    string id = 1;
    string md5 = 2;
    string name = 3;
    string path = 4;
    string mimeType = 5;
    uint64 length = 6;
    string destination = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
}


enum Sex {
    male = 0;
    female = 1;
    unknown = 2;
}


message EmployeeGetResponse {
    Employee employee = 1;
}

//*分页参数可拆分
message PageInfoReq {
    int32 page = 1;
    int32 pageSize = 2;
    string orderBy = 3;
}
//*分页参数拆分
message PageInfoRes {
    //是否存在下一页
    bool hasNextPage = 1;
    //是否存在上一页
    bool hasPreviousPage = 2;
    //数据页第一个游标
    string startCursor = 3;
    //数据页最后一个游标
    string endCursor = 4;
}